--- a/university-voting-unique.html
+++ b/university-voting-unique.html
@@ -287,7 +287,7 @@
 
     <script>
         // ⚠️ 여기에 구글 스프레드시트 정보를 입력하세요
-        const SHEET_ID = 'YOUR_SHEET_ID_HERE'; // 스프레드시트 ID
+        const SHEET_ID = '340181697'; // 스프레드시트 ID
         const SHEET_NAME = '집계'; // 집계 시트 이름 (보통 '집계' 또는 'Sheet2')
         
         // 구글 시트 API URL 생성
