--- a/sales_dashboard_live.html
+++ b/sales_dashboard_live.html
@@ -461,7 +461,7 @@
 
     <script>
         // ⚙️ 여기에 구글 시트 URL을 입력하세요
-        const SHEET_URL = 'YOUR_GOOGLE_SHEET_URL_HERE';
+        const SHEET_URL = 'https://docs.google.com/spreadsheets/d/1YU74a--Cfr8ZJZrX1QwAzoixekNZLl6N5ESkIhd8Ysc/edit?gid=0#gid=0';
         
         let allData = {
             daily_sales: [],
