--- a/university-voting-unique.html
+++ b/university-voting-unique.html
@@ -505,17 +505,43 @@
             h1 { font-size: 2.1em; }
             .truck-emoji { font-size: 3.5em; }
             .podium-container {
-                flex-direction: column;
-                align-items: center;
+                gap: 8px;
+                padding: 0 10px;
             }
-            .podium-card {
-                width: 100%;
-                max-width: 300px;
+            .podium-profile {
+                padding: 12px;
+                min-width: 0;
             }
-            .podium-card.rank-1,
-            .podium-card.rank-2,
-            .podium-card.rank-3 {
-                order: initial;
+            .uni-avatar {
+                width: 50px;
+                height: 50px;
+                font-size: 1.8em;
+            }
+            .uni-name {
+                font-size: 0.85em;
+            }
+            .uni-count {
+                font-size: 1.5em;
+            }
+            .uni-label {
+                font-size: 0.75em;
+            }
+            .podium-base {
+                padding: 12px 5px;
+            }
+            .rank-1 .podium-base { height: 100px; }
+            .rank-2 .podium-base { height: 70px; }
+            .rank-3 .podium-base { height: 60px; }
+            .podium-rank {
+                font-size: 2em;
+            }
+            .crown-icon {
+                font-size: 1.5em;
+                top: -15px;
+            }
+            .rank-change {
+                font-size: 0.75em;
+                padding: 3px 8px;
             }
             .total-number { font-size: 3.5em; }
         }
