--- a/봄날엔_2월_마케팅_쉬운요약.html
+++ b/봄날엔_2월_마케팅_쉬운요약.html
@@ -906,11 +906,11 @@ body {
     <div class="glossary-title">📖 마케팅 용어 간단 정리</div>
     <dl>
       <dt>ROAS (로아스)</dt>
-      <dd>광고비 대비 매출. 예: ROAS 500% = 100원 써서 500원 벌었다 / 높을수록 좋아요!</dd>
+      <dd>광고비 대비 매출. 예: ROAS 500% = 100원 써서 500원 벌었다.</dd>
       <dt>CPS (씨피에스)</dt>
       <dd>판매 1건당 든 광고비. 낮을수록 효율 좋음. 목표는 ₩4,500~7,500</dd>
       <dt>리타겟팅</dt>
-      <dd>한 번 관심을 보인 사람에게 다시 광고를 보여주는 방식. 전환율이 높아요!</dd>
+      <dd>한 번 관심을 보인 사람에게 다시 광고를 보여주는 방식의 광고 방식입니다.</dd>
       <dt>트래픽 광고</dt>
       <dd>판매가 목적이 아니라 사이트 방문자를 늘리는 게 목적인 광고</dd>
       <dt>협찬비</dt>
