--- a/봄날엔_1월_마케팅_쉬운요약.html
+++ b/봄날엔_1월_마케팅_쉬운요약.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>봄날엔 · 1월 마케팅 성과 — 쉬운 요약</title>
+<title>여수언니 / 봄날엔 · 1월 마케팅 성과 — 요약</title>
 <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
 <style>
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
@@ -531,12 +531,12 @@ body {
     <div class="strat-card">
       <div class="strat-num">1</div>
       <div class="strat-title">초코퐁당 영상 비중 강화</div>
-      <div class="strat-desc">ROAS 905%를 기록한 소재예요! 2월에도 핵심으로 계속 활용하고, 여수언니의 신제품 영상도 소규모로 테스트해보고 싶어요.</div>
+      <div class="strat-desc">ROAS 905%를 기록한 소재예요! 2월에도 핵심으로 계속 활용하고, 여수언니의 신제품 영상도 소규모로 테스트 해보겠습니다.</div>
     </div>
     <div class="strat-card">
       <div class="strat-num">2</div>
       <div class="strat-title">리타겟팅 예산 늘리기</div>
-      <div class="strat-desc">1월 리타겟 ROAS가 1,251%로 가장 높았어요! 기존보다 예산을 늘려 피쵸퐁·요거퐁 연출컷으로 효율을 더 높일게요.</div>
+      <div class="strat-desc">1월 리타겟 ROAS가 1,251%로 가장 높았어요! 기존보다 예산을 늘려 피쵸퐁·요거퐁 연출컷으로 효율을 더 높일 예정이에요.</div>
     </div>
     <div class="strat-card">
       <div class="strat-num">3</div>
