--- a/봄날엔_1월_마케팅_쉬운요약.html
+++ b/봄날엔_1월_마케팅_쉬운요약.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>여수언니 / 봄날엔 · 1월 마케팅 성과 — 요약</title>
+<title>봄날엔 · 1월 마케팅 성과 — 요약</title>
 <link href="https://fonts.googleapis.com/css2?family=Gowun+Dodum&family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
 <style>
 *, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
